<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/very_light_pink"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:alpha=".4"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/letsgoo"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/titleMainPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="1"
        android:fontFamily="@font/carter_one"
        android:shadowColor="#7E6C6A"
        android:shadowDx="10"
        android:shadowDy="15"
        android:shadowRadius="5"
        android:text="@string/sum_of_factors"
        android:textColor="#CDB1AD"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.071"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/titleInformation"
        android:layout_width="338dp"
        android:layout_height="146dp"
        android:fontFamily="@font/carter_one"
        android:shadowColor="#5A5758"
        android:shadowDx="5"
        android:shadowDy="7"
        android:shadowRadius="5"
        android:text="@string/enter_a_positive_number_less_than_100_000_and_click_on_the_button_to_get_your_result"
        android:textAlignment="center"
        android:textColor="#B1ABAC"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleMainPage"
        app:layout_constraintVertical_bias="0.274"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="128dp"
        android:fontFamily="@font/carter_one"
        android:text="@string/calculate"
        android:textColor="#7E6C6A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userInput"
        app:layout_constraintVertical_bias="0.125"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/userInput"
        android:layout_width="253dp"
        android:layout_height="48dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_a_number_greater_than_0"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="5"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleInformation"
        app:layout_constraintVertical_bias="0.054"
        tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>